# n8n-repo

./: .env.example  .env.vps.example  .gitignore  AGENTS.md  ANTIGRAVITY_HANDOFF.md  CLAUDE.md  GEMINI.md  README.md  docker-compose.evolution.yml  docker-compose.prod.yml  docker-compose.yml
.cursor/: mcp.json.example
.tmp/: handoff.md
config/: Caddyfile
directives/: activate_medident_pilot.md  appointment_trigger.md  chat_tunnel.md  estesoft_integration.md  evolution_setup.md  google_reviews_sync.md  import_workflows.md  integrations_hotels.md  product_roadmap.md  security.md  sikayetvar_sync.md  social_media_automation.md  start_stack.md  supabase_migrate.md  test_workflows.md  vertex_ai_setup.md  vps_setup.md
docs/: ARCHITECTURE.md  MVP_ROADMAP.csv  MVP_ROADMAP.md  NEFALIX-AUTOMATION.md  NefalixAI_Sosyal_Medya_Strateji.xlsx  Nefalix_MVP_Yol_Haritasi.xlsx  Nefalix_SaaS_Gelistirme_Matrisi.xlsx  Nefalix_Strateji_Yol_Haritasi_2026.xlsx  SETUP.md  SUPABASE.md
execution/: activate-medident-pilot.sh  activate-whatsapp-receive-only.sh  bootstrap-vps.sh  configure-estesoft-webhook.sh  configure-evolution-webhook.sh  deploy-to-vps.sh  deploy-v2-site.sh  draft-google-reviews.py  enable-whatsapp-send.sh  fix-vps-supabase-env.sh  generate-ekip-gelistirme-sunumu.py  generate-mvp-roadmap-excel.py  generate-saas-matrix-excel.py  import-web-chatbot.py  (+45 more)
fastapi-mcp/: fly.toml  main.py  pyproject.toml
fastapi-mcp/models/: schemas.py
fastapi-mcp/routers/: ai.py  health.py  mcp.py  webhooks.py
fastapi-mcp/services/: audit_service.py  openai_service.py  supabase_client.py
(+87 files in other folders)
