[project]
name = "nefalix-mcp"
version = "0.1.0"
description = "Nefalix AI MCP Server — GEO/AEO audit, AI scoring, board summaries"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "supabase>=2.10.0",
    "openai>=1.50.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "python-multipart>=0.0.12",
    "beautifulsoup4>=4.12.0",
    "extruct>=0.17.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.backends.legacy:build"
